--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,7 +1,10 @@
 footer {
-  width: 100%;
-  left: 0;
-  bottom: 0;
+  position: fixed;
+  height: 50px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
   color: aliceblue;
   background: black;
 }
